--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "symfony/property-access": "2.8.*"
+        "symfony/property-access": "~2.8|~3.0"
     },
     "autoload": {
         "psr-0": { "HGG\\PropertyAccessor\\": "src/" }
